compiler/tools/fpp-check/test/enum/undef_constant_1.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/enum/undef_constant_1.fpp:1.14
enum E { X = a }
             ^
error: symbol a is not defined
note: looking for a constant here
